frontend/src/styles/index.scss
/* ... */
.message + .message > .withavatar.separate {
	margin-top: 8px;
}

#root > header {
	grid-area: header;
	background: $bg-200;
	box-shadow: 0 2px 8px $bg-100;
	border-bottom: solid $sep-500 1px;
	padding: 8px;
	@include truncate;
}

#root > footer {
	grid-area: footer;
	background: $bg-150;
	border-top: solid $bg-300 1px;
	padding: 0 4px;
	display: flex;
	align-items: center;
	font-size: 0.9rem;
}

.webrtc > .ui {
	padding: 4px;
	border: solid $sep-500 1px;
	background: $bg-100;
	display: inline-block;

	.row {
		display: flex;
	}

	.strike {
		filter: none;

		image {
			filter: invert(0.9);
		}
	}

	.strike > line {
		visibility: hidden;
		stroke: $color-red;
	}

	.strike[aria-checked="true"] {
		image {
			mask: url(#strike);
		}

		line {
			visibility: visible;
		}
	}

	video {
		border: solid red 1px;
	}
}

.box {
	background: $bg-150;
	border: solid $sep-500 1px;
	padding: 4px;
	display: inline-block;
}

.dnd-hover {
	border-top: solid #3fa9c9 3px;
	margin-top: -3px;
}

.dnd-dragging {
	color: #aaa;
}

.user-settings-info {
	.profile {
		display: grid;
		grid-template-rows: auto 1fr;
		grid-template-columns: auto 1fr;
		grid-template-areas: "avatar name" "avatar description";
		gap: 4px;

		.name {
			grid-area: name;
			font-weight: bold;
			font-size: 1.2em;
			cursor: pointer;
		}

		.description {
			grid-area: description;
		}

		.avatar {
			grid-area: avatar;
		}
	}
}

#root > .nav2 {
	width: 64px;
	display: flex;
	grid-area: nav2;
	overflow: auto;
	padding-top: 4px;
	padding-bottom: 240px;
	background-color: $bg-100;

	& > ul {
		flex-direction: column;
		align-items: center;

		& > li {
			min-height: 48px;
			width: 48px;
			background: #2a2a2a;
			margin-top: 4px;
			border-radius: 4px;
			display: flex;
			overflow: hidden;
		}
	}
}

.reactions {
	display: flex;
	gap: 4px;

	li {
		cursor: pointer;
		border: solid #445 1px;
		background: #4452;
		border-radius: 3px;
		padding: 2px 4px;
		display: flex;
		align-items: center;
		gap: 4px;
	}

	li.me {
		border: solid #44f 1px;
		background: #44f2;
	}
}

ins {
	color: $color-green;
	background: oklch(var(--color-green) / 0.1);
}

del {
	color: $color-red;
	background: oklch(var(--color-red) / 0.1);
	text-decoration: line-through;
}

.upload-item {
	background: $bg-300;
	border-radius: 4px;
	display: flex;
	overflow: hidden;
	width: 320px;
	height: 48px;

	.thumb {
		background: #8af;
		aspect-ratio: 1;
		height: 100%;
		background-size: cover;
		border: solid $bg-300 1px;
		border-right: none;
		border-radius: 4px;
		border-bottom-right-radius: 0;
		border-top-right-radius: 0;
	}

	.info {
		padding: 4px;
		flex: 1;
	}

	.progress {
		height: 8px;
		width: 100%;
		background-color: $bg-400;

		.bar {
			fill: $link-500;
		}
	}
}

